html body width overflow bug fixing mobile white space

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,7 +5,9 @@
   }
 
 html, body {
-    height: 100%
+    height: 100%;
+    overflow-x:hidden;
+    width:100%;
 }
 
 /* 
